--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 <h2 is-upgraded><strong>ご準備いただきたいもの</strong></h2>
 <ul>
 <li>マネジメントコンソールにアクセスするための Webブラウザ<br>Chrome / Firefox <br><img style="width: 750.00px" src="img/32d9ad7bb8d38a03.png"></li>
-<li>HTML ファイルを作成するためのテキストエディタ<br><img style="width: 750.00px" src="img/599a1d4a13a9ffd2.png"></li>
 <li>AWS アカウント及び Administrator Access 権限を持つ IAM ユーザー<br><img style="width: 750.00px" src="img/a02139f0b7cfc3c9.png"></li>
 </ul>
 
@@ -115,7 +114,7 @@
 <h2 is-upgraded><br>2.<strong>バケットを作成する</strong></h2>
 <p>[ <strong>バケットを作成</strong> ] ボタンをクリックします。</p>
 <p class="image-container"><img style="width: 1213.00px" src="img/4c4d528bf217706.png"></p>
-<p>バケット名は任意ですが、handson-website-＜お名前＞ をお勧めします。</p>
+<p>バケット名は任意ですが、handson-website-＜お名前フルネーム＞ をお勧めします。</p>
 <h2 is-upgraded><br>3.<strong>AWS リージョン</strong></h2>
 <p>AWS リージョンが [ <strong>アジアパシフィック (東京) ap-northeast-1</strong> ] であることを確認してください。</p>
 <p class="image-container"><img style="width: 1662.00px" src="img/6cbb109233b0a57a.png"></p>
@@ -193,6 +192,7 @@
 </code></pre>
 <p>以下のようなイメージです。</p>
 <p class="image-container"><img style="width: 1104.00px" src="img/c763cc3ed6968e5c.png"></p>
+<p>問題なければ、[ <strong>変更の保存</strong> ] ボタンをクリックしてください。</p>
 <p>バケットポリシーを設定すると、[ <strong>パブリックにアクセス可能</strong> ] と表示されるようになります。</p>
 <p class="image-container"><img style="width: 1110.00px" src="img/8f547a7a31838415.png"></p>
 <h2 is-upgraded><strong>3.静的ウェブサイトホスティングを有効化</strong></h2>
