--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 <p class="image-container"><img style="width: 1704.00px" src="img/1ba898cf21ff592d.png"></p>
 <h2 is-upgraded><strong>4.確認</strong></h2>
 <p>[ <strong>静的ウェブホスティング</strong> ] に URL が表示されるので、クリックしてください。</p>
+<p class="image-container"><img style="width: 1648.00px" src="img/s3-hosting.png"></p>
 <h3 is-upgraded><strong>ブラウザからアクセスしてみる</strong></h3>
 <p>以下、ページが表示されたら成功です。</p>
 <p class="image-container"><img style="width: 1402.00px" src="img/848437e7ed07c35d.png"></p>
