--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h2 is-upgraded><br><strong>S3 のメリット</strong></h2>
 <ul>
 <li>事実上無制限の容量を持つストレージ</li>
-<li>99.99999999%(イレブンナイン) の高い耐久性</li>
+<li>99.999999999%(イレブンナイン) の高い耐久性</li>
 <li>様々な AWS  サービスとシームレスに連携</li>
 <li><strong>静的 Web サイトホスティング機能 </strong>← 本ハンズオンではここを掘り下げます</li>
 </ul>
@@ -241,7 +241,8 @@
     
       <google-codelab-step label="[座学] バケットポリシーの解説①" duration="5">
         <h3 is-upgraded><strong>ケース : ページへのアクセスを禁止したい</strong></h3>
-<p>S3 バケットのバケットポリシーでアクセスを禁止すると、403 Forbidden エラーになります。<br>S3 の静的ウェブホスティング機能では、エラーが発生した際にエラーページに遷移させることができます。<br>この機能を利用すると、メンテナンス中のページへのアクセスを禁止し、全てのアクセスをメンテナンスページに遷移させることができます。</p>
+<p>S3 バケットのバケットポリシーでアクセスを禁止すると、403 Forbidden エラーになります。<br>S3 の静的ウェブホスティング機能では、エラーが発生した際にエラーページに遷移させることができます。</p>
+<p><br>この機能を利用すると、メンテナンス中のページへのアクセスを禁止し、全てのアクセスをメンテナンスページに遷移させることができます。</p>
 <p class="image-container"><img style="width: 1542.00px" src="img/d8dd923fd431d378.png"></p>
 <h3 is-upgraded><br><strong>オブジェクト単位のアクセス制御</strong></h3>
 <p>バケットポリシーは、オブジェクト単位でのアクセス制御にも対応しています。<br>前述の手順では、以下のように「*」を利用して、バケットの配下全部に適用していました。</p>
@@ -364,7 +365,7 @@
 <p>上記 URL にアクセスして、表示された IP アドレスが現在利用されているネットワークのグローバル IP アドレスになります。</p>
 <p class="image-container"><img style="width: 1211.00px" src="img/fe26b5104d61de65.png"></p>
 <p>バケットポリシーには以下 JSON をを設定してください。</p>
-<p>1.1.1.1/32 の部分はご自身のグローバル IP アドレスを指定ください。<br>&lt;バケット名&gt; をバケット名に変更してください。</p>
+<p><strong>&lt;あなたのIPアドレス(IPv4)&gt;</strong>/32 の部分はご自身のグローバル IP アドレスを指定ください。<br><strong>&lt;バケット名&gt;</strong> をバケット名に変更してください。</p>
 <pre><code>{
         &#34;Version&#34;: &#34;2012-10-17&#34;,
         &#34;Statement&#34;: [
@@ -379,7 +380,7 @@
                         &#34;Resource&#34;: &#34;arn:aws:s3:::&lt;バケット名&gt;/*&#34;,
                         &#34;Condition&#34;: {
                                 &#34;IpAddress&#34;: {
-                                        &#34;aws:SourceIp&#34;: &#34;1.1.1.1/32&#34;
+                                        &#34;aws:SourceIp&#34;: &#34;&lt;あなたのIPアドレス(IPv4)&gt;/32&#34;
                                 }
                         }
                 },
