--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <h2 is-upgraded><br>2.<strong>バケットを作成する</strong></h2>
 <p>[ <strong>バケットを作成</strong> ] ボタンをクリックします。</p>
 <p class="image-container"><img style="width: 1213.00px" src="img/4c4d528bf217706.png"></p>
-<p>バケット名は任意ですが、handson-website-＜お名前フルネーム＞ をお勧めします。</p>
+<p>バケット名は任意ですが、jawsdays2022-handson-＜お名前フルネーム＞ をお勧めします。</p>
 <h2 is-upgraded><br>3.<strong>AWS リージョン</strong></h2>
 <p>AWS リージョンが [ <strong>アジアパシフィック (東京) ap-northeast-1</strong> ] であることを確認してください。</p>
 <p class="image-container"><img style="width: 1662.00px" src="img/6cbb109233b0a57a.png"></p>
